--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <title>Simple Digital Learning Guide</title>
 </head>
 <body>
+  <meta name="google-site-verification" content="lKmAfiknltrhj7Hs4FXbv2z-FSmXUMLO1sg73ogr9lc" />
+<a href="https://docs.google.com/spreadsheets/d/1_ERP43cjXwmaPkPy0t83Cy2jwkDYdwj_wGftDXnTh9I/edit?gid=0#gid=0" target="_blank" rel="noopener noreferrer">
+  Open Google Sheet
+</a>
 
 <h2>Simple Digital Learning Guide for Everyday Users</h2>
 
@@ -33,3 +37,4 @@ world more effectively.
 
 </body>
 </html>
+
