--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+  <meta name="google-site-verification" content="lKmAfiknltrhj7Hs4FXbv2z-FSmXUMLO1sg73ogr9lc" />
 <title>Simple Digital Learning Guide</title>
 </head>
 <body>
@@ -34,6 +35,7 @@ world more effectively.
 
 </body>
 </html>
+
 
 
 
